Closed Bug 919247 Opened 12 years ago Closed 12 years ago

crash in nsMsgDBView::SetThreadIgnored(nsIMsgThread*, unsigned int, bool)

Categories

(MailNews Core :: Backend, defect)

defect
Not set
critical

Tracking

(thunderbird27 fixed, thunderbird28 fixed, thunderbird_esr2428+ fixed)

VERIFIED FIXED
Thunderbird 29.0
Tracking Status
thunderbird27 --- fixed
thunderbird28 --- fixed
thunderbird_esr24 28+ fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

#26 crash for TB24 This bug was filed from the Socorro interface and is report bp-9c29439e-1d38-4a18-ab18-1e5f12130921. ============================================================= 0 xul.dll nsMsgDBView::SetThreadIgnored(nsIMsgThread *,unsigned int,bool) mailnews/base/src/nsMsgDBView.cpp 1 xul.dll nsMsgDBView::ToggleIgnored(unsigned int *,int,unsigned int *,bool *) mailnews/base/src/nsMsgDBView.cpp 2 xul.dll nsMsgDBView::NavigateFromPos(int,unsigned int,unsigned int *,unsigned int *,unsigned int *,bool) mailnews/base/src/nsMsgDBView.cpp 3 xul.dll nsMsgDBView::ViewNavigate(int,unsigned int *,unsigned int *,unsigned int *,bool) mailnews/base/src/nsMsgDBView.cpp 4 xul.dll NS_InvokeByIndex xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
Thanks!
Attached patch proposed fixSplinter Review
This might have something to do with the fact that you can undo the ignore from the notification long afterwards, and perhaps the the db goes away during that time. Anyway, this is why it's crashing (m_keys index is validated to be ok). Ignore subthread should have the same problem, so i added the check there too.
Attachment #826510 - Flags: review?(mbanner)
Status: NEW → ASSIGNED
Hardware: x86 → All
Comment on attachment 826510 [details] [diff] [review] proposed fix Looks good, r=Standard8
Attachment #826510 - Flags: review?(mbanner) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 29.0
Looks like small safe candidate for TB24?
Attachment #826510 - Flags: approval-comm-esr24?
Comment on attachment 826510 [details] [diff] [review] proposed fix [Triage Comment] Yep, lets get this out for some testing, and release in the next cycle.
Attachment #826510 - Flags: approval-comm-beta+
Attachment #826510 - Flags: approval-comm-aurora+
Attachment #826510 - Flags: approval-comm-esr24? → approval-comm-esr24+
v.fixed - does not appear in TB31 nor in newer TB24.x
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsMsgDBView::SetThreadIgnored(nsIMsgThread*, unsigned int, bool)] → [@ nsMsgDBView::SetThreadIgnored(nsIMsgThread*, unsigned int, bool) ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: