Bug 919247 - crash in nsMsgDBView::SetThreadIgnored(nsIMsgThread*, unsigned int, bool). r=standard8